--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           mastodont \
           -e https://masto.yttrx.com \
-            -t ${{ secret.MASTODONT_ACCESS_TOKEN}} \
+            -t ${{ secrets.MASTODONT_ACCESS_TOKEN }} \
             -b https://raw.githubusercontent.com/waffle2k/mastodont/main/blocklist.txt \
             -s suspend \
             --private-comment "Added from shared blocklist, $(date +%F %T)" \
